# precept

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ANTHROPIC-CONFORMANCE.md  ARTIFACTS.md  BACKLOG.md  CASE-STUDY.md  CONTEXT-MANAGEMENT.md  CONVENTION-ARTIFACT.md  LANGUAGE.md
precept/: __init__.py  bootstrap.py  catalog.py  claude_md.py  cli.py  compile.py  context_rules.py  convention.py  detect.py  doctor.py  enforce.py  governance.py  health.py  hooks.py  inference.py  install.py  judge.py  mcp_server.py  meter.py  models.py  paths.py  review.py  review_actions.py  safe_regex.py  safety.py  synthesize.py  telemetry.py  writers.py
precept/adapters/: __init__.py  claude_code.py
precept/evals/: __init__.py  golden_enforcement.json  harness.py  live.py  tokens.py
precept/knowledge/: __init__.py  audit.py  capture.py  config.py  conventions.py  frontmatter.py  index.py  ops.py  retrieval.py  store.py
tests/: conftest.py  test_bootstrap.py  test_claude_md.py  test_compile_integration.py  test_context_rules.py  test_convention.py  test_detect.py  test_doctor.py  test_enforce.py  test_evals.py  test_governance.py  test_health.py  test_hooks_wiring.py  test_incremental_detect.py  test_inference.py  test_install.py  test_judgment.py  test_knowledge.py  test_knowledge_pillar.py  test_knowledge_slice2.py  test_mcp_server.py  test_models.py  test_observability.py  test_permissions.py  test_proactive_review.py  test_repo_privacy.py  test_retrieval_perf.py  test_safe_regex.py  test_safety.py  test_synthesize.py  test_telemetry.py  test_tokens.py  test_userpromptsubmit.py  test_writers.py
ts/: .gitignore  README.md  STATUS.md  package.json  tsconfig.json
ts/src/: cli.ts  injection.ts  interception.ts  observation.ts
ts/src/domain/: candidate.ts  check.ts  currency.ts  enforce.ts  entry.ts  evidence.ts  facts.ts  glob.ts  regex.ts  validate.ts
ts/src/gate/: gate.ts
ts/src/host/: claude_code.ts  install.ts  transcript.ts
ts/src/infer/: capture.ts  cli_client.ts  client.ts  detect.ts  prefilter.ts
ts/src/projection/: projection.ts
ts/src/record/: cursor.ts  decision.ts  evidence.ts  fault.ts  history.ts  log.ts  queue.ts
ts/src/retrieve/: index.ts  retrieve.ts
ts/src/store/: card.ts  lock.ts  paths.ts
ts/test/: arch.test.ts  cli.test.ts  currency.e2e.test.ts  interception.test.ts  lifecycle.e2e.test.ts  loop.e2e.test.ts  observation.test.ts  privacy.test.ts  recursion.test.ts
ts/test/domain/: check.test.ts  currency.test.ts  enforce.test.ts  entry.test.ts  glob.test.ts  lifecycle.test.ts  regex.test.ts  validate.test.ts
ts/test/fixtures/: session_start.json  user_prompt_submit.json
ts/test/gate/: writepath.test.ts
ts/test/host/: injection.test.ts  install.test.ts  transcript.test.ts
ts/test/infer/: cli_client.test.ts  prefilter.test.ts
ts/test/retrieve/: index.test.ts
ts/test/store/: card.test.ts
