[project]
name = "precept"
version = "0.1.0"
description = "Personal, self-improving platform for agentic AI processes and data cataloging: learns from your sessions to improve its data catalog, its defined entities (rules, skills, agent personas), and its processes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Noa Barzelay" }]
keywords = ["claude-code", "hooks", "guardrails", "policy-as-code", "agent-reliability", "evals"]

dependencies = [
    "anthropic>=0.112",  # DETECT/COMPILE/judge use messages.parse(output_format=...), added in recent SDKs; 0.112 is the verified-working floor
    "pydantic>=2.0",     # the typed spine: Lesson + Policy IR
    "typer>=0.12",       # the catalog CLI (list/show/why/keep/delete)
    "pyyaml>=6.0",       # markdown-card frontmatter
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.13"]

[project.scripts]
precept = "precept.cli:app"
precept-hook-pretooluse = "precept.hooks:pretooluse_main"
precept-hook-stop = "precept.hooks:stop_main"
precept-hook-userpromptsubmit = "precept.hooks:userpromptsubmit_main"
precept-hook-sessionstart = "precept.hooks:sessionstart_main"
precept-hook-sessionend = "precept.hooks:detect_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["precept"]

[tool.mypy]
packages = ["precept"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
